--- a/friends.html
+++ b/friends.html
@@ -29,7 +29,7 @@
         <div class="screen-header__icons">
             <span class="screen-header__icon"><i class="fas fa-search fa-lg"></i></span>
             <span class="screen-header__icon"><i class="fas fa-music fa-lg"></i></span>
-            <span class="screen-header__icon"><i class="fas fa-cog fa-lg"></i></span>
+            <span class="screen-header__icon"><a href="setting.html"><i class="fas fa-cog fa-lg"></i></a></span>
         </div>
     </header>
 
@@ -75,8 +75,6 @@
         </div>
     </main>
 
-
-
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn">
@@ -104,6 +102,13 @@
         </ul>
     </nav>
 
+    <div id="splash-screen">
+        <i class="fas fa-comment fa-7x"></i>
+    </div>
+
+    <div id="no-mobile">
+        <span>your screen is so big ㅠㅠ</span>
+    </div>
 
     <script src="https://kit.fontawesome.com/73fbcb87e6.js" crossorigin="anonymous"></script>
 </body>
