--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Kokoa clone</title>
 </head>
+
 <body>
     <div class="status-bar">
         <div class="status-bar__column">
@@ -24,18 +26,24 @@
 
     <header class="welcome-header">
         <h1 class="welcome-header__title">Welcome to Kokoa clone</h1>
-        <p class="welcome-header__text">If you have a Kokoa Account, 
-            <br>log in with your email or phone number. </p>
+        <p class="welcome-header__text">If you have a Kokoa Account,
+            <br>log in with your email or phone number.
+        </p>
     </header>
 
     <form action="friends.html" method="get" class="login-form">
-        <input name="username" type="text" placeholder="Email or phone number"/>
-        <input name="password" type="password" placeholder="Password"/>
+        <input name="username" type="text" placeholder="Email or phone number" />
+        <input name="password" type="password" placeholder="Password" />
         <input type="submit" value="Log In">
         <a href="#">Find Kokoa Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+        <span>your screen is so big ㅠㅠ</span>
+    </div>
+
 
     <script src="https://kit.fontawesome.com/73fbcb87e6.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
