--- a/setting.html
+++ b/setting.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chats - kokoa clone</title>
+    <title>setting - kokoa clone</title>
 </head>
 
 <body>
@@ -24,34 +24,43 @@
         </div>
     </div>
 
-    <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
-        <div class="screen-header__icons">
-            <span class="screen-header__icon"><i class="fas fa-search fa-lg"></i></span>
-            <span class="screen-header__icon"><i class="far fa-comment-dots fa-lg"></i></span>
-            <span class="screen-header__icon"><i class="fas fa-music fa-lg"></i></span>
-            <span class="screen-header__icon"><a href="setting.html"><i class="fas fa-cog fa-lg"></i></a></span>
+    <header class="alt-header">
+        <div class="alt-header__column">
+            <a href="more.html"><i class="fas fa-angle-left fa-2x"></i></a>
+        </div>
+        <div class="alt-header__column">
+            <h1 class="alt-header__title">Settings</h1>
+        </div>
+        <div class="alt-header__column">
+            <i class="fas fa-search fa-lg fa-lg"></i>
         </div>
     </header>
 
 
-    <main class="main-screen">
-        <a href="chat.html">
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="https://avatars.githubusercontent.com/u/3612017?s=100&v=4"
-                        class="user-component__img user-component__img" />
-                    <div class="user-component__text">
-                        <h4 class="user-component__title user-component__title--not-bold">Nicolas</h4>
-                        <h6 class="user-component__subtitle">Please check My Kakao Account Info</h6>
-                    </div>
+    <main class="main-screen setting-screen">
+        <ul class="settings-list">
+            <li class="settings-setting">
+                <div class="settings-setting__column">
+                    <i class="fas fa-bullhorn"></i>
+                    <span>Notices</span>
                 </div>
-                <div class="user-component__column">
-                    <span class="user-component__time">21:22</span>
-                    <div class="badge">1</div>
+                <div class="settings-setting__column"></div>
+            </li>
+            <li class="settings-setting">
+                <div class="settings-setting__column">
+                    <i class="fas fa-flask"></i>
+                    <span>Kakao Lab</span>
                 </div>
-            </div>
-        </a>
+                <div class="settings-setting__column"></div>
+            </li>
+            <li class="settings-setting">
+                <div class="settings-setting__column">
+                    <i class="fas fa-info-circle"></i>
+                    <span>Version</span>
+                </div>
+                <div class="settings-setting__column">Latest Version</div>
+            </li>
+        </ul>
     </main>
 
 
@@ -65,7 +74,7 @@
             </li>
             <li class="nav__btn">
                 <a class="nav__link" href="chats.html">
-                    <i class="fas fa-comment fa-lg"></i>
+                    <i class="far fa-comment fa-lg"></i>
                     <span class="nav__notification badge">1</span>
                 </a>
             </li>
@@ -82,10 +91,10 @@
             </li>
         </ul>
     </nav>
-
     <div id="no-mobile">
         <span>your screen is so big ㅠㅠ</span>
     </div>
+
     <script src="https://kit.fontawesome.com/73fbcb87e6.js" crossorigin="anonymous"></script>
 </body>
 
