--- a/friends.html
+++ b/friends.html
@@ -107,7 +107,7 @@
     </div>
 
     <div id="no-mobile">
-        <span>your screen is so big ㅠㅠ</span>
+        <span>your screen is super big ㅠㅠ</span>
     </div>
 
     <script src="https://kit.fontawesome.com/73fbcb87e6.js" crossorigin="anonymous"></script>
