--- a/chat.html
+++ b/chat.html
@@ -29,7 +29,7 @@
             <a href="chats.html"><i class="fas fa-angle-left fa-2x"></i></a>
         </div>
         <div class="alt-header__column">
-            <h1 class="alt-header__title">Nicolas</h1>
+            <h1 class="alt-header__title">song22ee</h1>
         </div>
         <div class="alt-header__column">
             <span><i class="fas fa-search fa-lg fa-lg"></i></span>
@@ -43,9 +43,10 @@
             Tuesday , June 30, 2020
         </div>
         <div class="message-row">
-            <img src="https://avatars.githubusercontent.com/u/3612017?s=100&v=4">
+            <img
+                src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjAxMjVfMjMy%2FMDAxNjQzMTAyOTg1NzI0.bkW6TJVG82Gi8uG643n5SaSTYOyEcNAq0Y7xsEkOBSUg.rU7SY3uYHJGnigm3WzvBk0LkXt_cO6UOyVsfeKxbEPAg.JPEG.minziminzi128%2FIMG_7370.JPG&type=sc960_832">
             <div class="message-row__content">
-                <div class="message__author">Nicolas</div>
+                <div class="message__author">song22ee</div>
                 <div class="message__info">
                     <span class="message__bubble">Hi!</span>
                     <span class="message__time">21:27</span>
