--- a/more.html
+++ b/more.html
@@ -39,10 +39,10 @@
     <main class="main-screen more-screen">
         <div class="user-component">
             <div class="user-component__column">
-                <img src="https://avatars.githubusercontent.com/u/3612017?s=100&v=4"
+                <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjAxMjVfMjMy%2FMDAxNjQzMTAyOTg1NzI0.bkW6TJVG82Gi8uG643n5SaSTYOyEcNAq0Y7xsEkOBSUg.rU7SY3uYHJGnigm3WzvBk0LkXt_cO6UOyVsfeKxbEPAg.JPEG.minziminzi128%2FIMG_7370.JPG&type=sc960_832"
                     class="user-component__img user-component__img--xl" />
                 <div class="user-component__text">
-                    <h4 class="user-component__title">Nicolas</h4>
+                    <h4 class="user-component__title">song22ee</h4>
                     <h6 class="user-component__subtitle">+1 787-493-4219 <i class="fas fa-exclamation-circle"
                             style="color: rgba(255, 0, 0, 0.514);"></i></h6>
                 </div>
